fixed some typos

--- a/TrademarkGenerator.ipynb
+++ b/TrademarkGenerator.ipynb
@@ -37,7 +37,7 @@
     "## Utility functions\n",
     "Those are bunch of functions used to encode and decode the inputs and outputs of the network.\n",
     "### Char to onehot\n",
-    "This converts a character into its onehot representation. Onehot vectors are vectors wich are used for multiclass input. Every element is zero except the correct label. For example we have the character `G` wich is the 7th letter in the alphabet so the onehot representation looks like`[0, 0, 0, 0, 0, 0, 1, 0, 0, ...]`\n",
+    "This converts a character into its onehot representation. Onehot vectors are used for multiclass input.All elements are zero except the one with the index of the correct label. E.g. we have the character `G`  the 7th letter in the alphabet so the onehot representation looks like `[0, 0, 0, 0, 0, 0, 1, 0, 0, ...]`\n",
     "### Sequence Encodeing\n",
     "This applies the aforementioned method to a string of characters. Since this function is only used for the input we only have to insert the Start-of-sequence-character (`<SOS>`). The last letter wich would be end-of-sequence (`<EOS>`) isn't passed as input.\n",
     "### Decoding target and output sequences\n",
@@ -185,7 +185,7 @@
     "$$softmax_i(x) = \\frac{e^{x_i}} {\\sum \\limits_{j} e^{x_j}}$$\n",
     "### Forward-Passing\n",
     "****\n",
-    "just passing the the sequence in a packed format from LSTM layer to LSTM layer. Since linear layers don't work with packed sequences, the data has to be converted into a padded sequence before propagating to the final layer.\n",
+    "This is just passing the the sequence in a packed format from LSTM layer to LSTM layer. Since linear layers don't work with packed sequences, the data has to be converted into a padded sequence before propagating to the final layer.\n",
     "### Training\n",
     "****\n",
     "Probably the most convoluted and messy method due to constant tinkering. It uses mini-batch learning wich means you have two loops: one for the epochs, one for the batches. In each epoch we determine how many batches to use wich determines how big the batches are. Increasing the size of the batches during training is an alternative to decreasing the learning rate because larger batches mean more accurate descent. First thing to do in the batch loop is to set the gradients to zero because torch accumulates gradients otherwise. After that we get a data batch on wich we compute our preditions and evaluate a given loss function. `loss.backward()` computes the gradients used by `optim.step()`. After that an evaluation loss is computed with a seperate evaluation dataset. If the evaluation loss is smaller than 3 and the currently best loss a checkpoint is saved.\n",
@@ -377,7 +377,7 @@
     "## Training Parameters\n",
     "Here we choose Optimizer, Loss function and number of epochs and batches\n",
     "### Loss Function: The Negative Log likelihood Loss (NLL)\n",
-    "This is the standard for multiclass sequence regression [more Info](https://pytorch.org/docs/stable/nn.html#nllloss). At first this was a really complex function punishing weights and encouragng variance in the output but it isn't really needed anymore. The solution was to decrease the capacity hence the simple model structure. It is also important to weigh the extra symbols less because they are more frequent.  \n",
+    "This is the standard for multiclass sequence regression ([more Info](https://pytorch.org/docs/stable/nn.html#nllloss)). At first this was a really complex function punishing weights and encouragng variance in the output but it isn't really needed anymore. The solution was to decrease the capacity hence the simple model structure. It is also important to weigh the extra symbols less because they are more frequent.  \n",
     "**TODO:** weigh the labels according to their abundances in the dataset. The ones that appear most should be weighed less.\n",
     "### The Adam Optimizer\n",
     "See [great source for optimizers](http://ruder.io/optimizing-gradient-descent/).\n",
