--- a/TrademarkGenerator.ipynb
+++ b/TrademarkGenerator.ipynb
@@ -35,10 +35,10 @@
       },
       "source": [
         "# Trademark Generator\n",
-        "A model to generate trademark names.\n",
-        "\n",
+        "A model to generate trademark names.  \n",
+        "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/Xnartharax/MachineLearning-experiments/master)  \n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Xnartharax/MachineLearning-experiments/blob/master/TrademarkGenerator.ipynb)  \n",
-        " The data comes from th [DPMA](https://register.dpma.de/DPMAregister/uebersicht). To get this install [git](https://git-scm.com/book/de/v1/Los-geht%E2%80%99s-Git-installieren) navigate to your desired directory with the `cd` command and use `git clone https://github.com/Xnartharax/MachineLearning-experiments`. To use this interactively install [anaconda](https://www.anaconda.com/distribution/#download-section) (The Python 3.7 version) and run `conda install pytorch` in the anaconda prompt. Then open a jupyter lab through the anaconda navigator and open the notebook from there."
+        " The data comes from th [DPMA](https://register.dpma.de/DPMAregister/uebersicht). To get this install [git](https://git-scm.com/book/de/v1/Los-geht%E2%80%99s-Git-installieren) navigate to your desired directory with the `cd` command and use `git clone https://github.com/Xnartharax/MachineLearning-experiments`. To use this interactively install [anaconda](https://www.anaconda.com/distribution/#download-section) (The Python 3.7 version) and run `conda install pytorch` in the anaconda prompt. Then open a jupyter lab through the anaconda navigator and open the notebook from there. Alternatively you can use the Binder and Colab links to use the the notebook."
       ]
     },
     {
@@ -135,11 +135,11 @@
       "metadata": {
         "id": "M_oath3POB2D",
         "colab_type": "code",
+        "outputId": "f3b2f292-1613-4416-93bb-2f4383b93a3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "f3b2f292-1613-4416-93bb-2f4383b93a3c"
+        }
       },
       "source": [
         "df = pd.read_csv(\"https://github.com/Xnartharax/MachineLearning-experiments/raw/master/treffer.csv\", sep=';', error_bad_lines=False)\n",
@@ -151,7 +151,7 @@
         "alphabet = [\"<pad>\"] + list(set(everything)) + [\"<SOS>\", \"<EOS>\"]\n",
         "print(len(alphabet))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,11 +597,11 @@
       "metadata": {
         "id": "qaaci8OUOB3I",
         "colab_type": "code",
+        "outputId": "d7327357-395b-48f9-986e-584ca12ef3f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 396
-        },
-        "outputId": "d7327357-395b-48f9-986e-584ca12ef3f1"
+        }
       },
       "source": [
         "fig, ((lax, aax), (gax, accax)) = plt.subplots(ncols=2, nrows=2)\n",
@@ -619,7 +619,7 @@
         "model.fit(features[100:10000], targets[100:10000], features[:100], targets[:100], epochs, n_batches, optim, criterion)\n",
         "#torch.save(model, \"./good_try.pt\") "
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,11 +647,11 @@
       "metadata": {
         "id": "e5AGoTowOB3M",
         "colab_type": "code",
+        "outputId": "e865db20-362a-4751-f4dc-592c418b4404",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 92
-        },
-        "outputId": "e865db20-362a-4751-f4dc-592c418b4404"
+        }
       },
       "source": [
         "ins, target, batch_len = get_batch(features, targets, 112, 1000)\n",
@@ -661,7 +661,7 @@
         "print(decode_sequence(model(ins, batch_size=10)[:, 2, :]))\n",
         "print(decode_target_seq(target[:, 2]))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
