--- a/TrademarkGenerator.ipynb
+++ b/TrademarkGenerator.ipynb
@@ -21,8 +21,7 @@
     "colab": {
       "name": "TrademarkGenerator.ipynb",
       "version": "0.3.2",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "accelerator": "GPU"
   },
@@ -139,7 +138,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f3b2f292-1613-4416-93bb-2f4383b93a3c"
+        "outputId": "ee6cbe54-65a5-4886-b2cd-e05f1334fcec"
       },
       "source": [
         "df = pd.read_csv(\"https://github.com/Xnartharax/MachineLearning-experiments/raw/master/treffer.csv\", sep=';', error_bad_lines=False)\n",
@@ -279,7 +278,7 @@
         "        # weight init\n",
         "        y = 1/np.sqrt(in_size)\n",
         "        self.core.weight_ih_l0.data.normal_(y)\n",
-        "        self.core.weight_hh_l0.data.normal_(y)\n",
+        "        # self.core.weight_hh_l0.data.normal_(y)\n",
         "        # residual shortcuts\n",
         "        self.residual = residual\n",
         "        if self.residual:\n",
@@ -524,7 +523,7 @@
         "colab": {}
       },
       "source": [
-        "model = CharPredictor((len(alphabet), 150, 150, len(alphabet)))\n",
+        "model = CharPredictor((len(alphabet), 200, 200, len(alphabet)))\n",
         "if torch.cuda.is_available():\n",
         "  model.cuda()"
       ],
@@ -570,7 +569,7 @@
         "n_batches = 99\n",
         "def criterion(y_hat, y):\n",
         "    main_loss = loss_func(torch.log(y_hat).view(-1, len(alphabet)), y.view(-1))\n",
-        "    loss = main_loss# + weight_punishment**0.0002 + 1*0.000001/y_hat.var()\n",
+        "    loss = main_loss\n",
         "    return loss"
       ],
       "execution_count": 0,
@@ -599,9 +598,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 396
+          "height": 759
         },
-        "outputId": "d7327357-395b-48f9-986e-584ca12ef3f1"
+        "outputId": "a6449cf3-43fa-43df-a01a-7e7c76f4c907"
       },
       "source": [
         "fig, ((lax, aax), (gax, accax)) = plt.subplots(ncols=2, nrows=2)\n",
@@ -619,14 +618,30 @@
         "model.fit(features[100:10000], targets[100:10000], features[:100], targets[:100], epochs, n_batches, optim, criterion)\n",
         "#torch.save(model, \"./good_try.pt\") "
       ],
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "49:60/61|0.5251199007034302|0.6518093347549438\n"
+            "6:52/94|0.6463279128074646|0.6609816551208496\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-34354c3b9045>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m }  \n\u001b[1;32m     12\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_batches\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;31m#torch.save(model, \"./good_try.pt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-7d236ebb1398>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, seqs, targets, eval_seqs, eval_targets, epochs, n_batches, optim, criterion, plots, start_epoch, losses, eval_losses)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m                 \u001b[0;31m#  computing evaluation predictions and loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m                 \u001b[0meval_y_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meval_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0meval_batch_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m                 \u001b[0meval_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meval_y_hat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meval_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    491\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    492\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 493\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    494\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    495\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-7d236ebb1398>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, seq, keep_hidden_state, batch_size, plots)\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;31m# otherwise the network assumes that each forward pass is a new sequence\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mkeep_hidden_state\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_hidden\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# important part\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-7d236ebb1398>\u001b[0m in \u001b[0;36minit_hidden\u001b[0;34m(self, batches)\u001b[0m\n\u001b[1;32m    136\u001b[0m             self.hidden = [(self.hidden_init(1, batches, layer_size).cuda(),\n\u001b[1;32m    137\u001b[0m                        self.hidden_init(1, batches, layer_size).cuda())\n\u001b[0;32m--> 138\u001b[0;31m                            for layer_size in self.structure[1:]] \n\u001b[0m\u001b[1;32m    139\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m             self.hidden = [(self.hidden_init(1, batches, layer_size),\n",
+            "\u001b[0;32m<ipython-input-8-7d236ebb1398>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    136\u001b[0m             self.hidden = [(self.hidden_init(1, batches, layer_size).cuda(),\n\u001b[1;32m    137\u001b[0m                        self.hidden_init(1, batches, layer_size).cuda())\n\u001b[0;32m--> 138\u001b[0;31m                            for layer_size in self.structure[1:]] \n\u001b[0m\u001b[1;32m    139\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m             self.hidden = [(self.hidden_init(1, batches, layer_size),\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         },
         {
           "output_type": "display_data",
@@ -649,26 +664,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 92
+          "height": 72
         },
-        "outputId": "e865db20-362a-4751-f4dc-592c418b4404"
+        "outputId": "26c2c49b-8ddb-457b-8e65-6afc91019016"
       },
       "source": [
-        "ins, target, batch_len = get_batch(features, targets, 112, 1000)\n",
+        "ins, target, batch_len = get_batch(features, targets, 110, 1000)\n",
         "model.eval()\n",
         "print(model.training)\n",
         "\n",
-        "print(decode_sequence(model(ins, batch_size=10)[:, 2, :]))\n",
-        "print(decode_target_seq(target[:, 2]))"
+        "print(decode_sequence(model(ins, batch_size=10)[:, 0, :]))\n",
+        "print(decode_target_seq(target[:, 0]))"
       ],
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "False\n",
-            "SROTONECANRO EI<EOS><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>\n",
-            "PHOTON MICROGUI<EOS><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad><pad>\n"
+            "SEARTSHAAEO CHE WETT GRNET<EOS>TION<EOS>\n",
+            "STAR TREK : THE NEXT GENERATION<EOS>\n"
           ],
           "name": "stdout"
         }
@@ -683,8 +698,6 @@
       "source": [
         "## How to go on\n",
         "The Character prediction is just the core part of the Generator. We still need to think about thinks like the starting input for generation (the seed), the output sampling method and a general application of this thing. This [Medium article ](https://towardsdatascience.com/the-arti-canon-neural-text-generation-2a8f032c2a68) gives a broader overview. If you want to learn how everything works you can take on the TODOs. Here are some things I'd like to try for the Predictor:\n",
-        "- Train on a small dataset. Then add some more data. Train again. Add more data and so on...\n",
-        "- Adding more layers through time.\n",
         "- Regularization (Dropout, L1, L2, etc.)\n",
         "- Look into [Transformers](https://arxiv.org/pdf/1706.03762.pdf)/Attention\n",
         "- Experiment with other datasets/more context\n",
@@ -714,6 +727,82 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x01B4K5rfVBi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class TrademarkGenerator(nn.Module):\n",
+        "  def __init__(self, charPredictor, beam_width):\n",
+        "    super(TrademarkGenerator, self).__init__()\n",
+        "    self.predictor = charPredictor\n",
+        "    self.beam_width = beam_width\n",
+        "  def forward(self):\n",
+        "    start_sequence = torch.tensor(char_to_onehot(\"<SOS>\"), dtype=torch.float).view(1, 1, -1)\n",
+        "    if torch.cuda.is_available():\n",
+        "      start_sequence = start_sequence.cuda()\n",
+        "    predictions = self.predictor(start_sequence)\n",
+        "    seqs = [[[len(alphabet)-2], 1] for _ in range(beam_width)]\n",
+        "    for i in range(self.beam_width):\n",
+        "      best = torch.argmax(predictions)\n",
+        "      p_best = predictions[0, 0, best]\n",
+        "      predictions[0, 0, best] = 0\n",
+        "      seqs[i]\n",
+        "      \n",
+        "    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYMuk3DvlGuV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 403
+        },
+        "outputId": "d0d82bf8-0347-4f46-89ff-86822463704a"
+      },
+      "source": [
+        "gen = TrademarkGenerator(model, 5)\n",
+        "gen()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[[6.2729e-04, 7.2167e-04, 1.8913e-04, 4.0444e-02, 2.2194e-02,\n",
+            "          5.9242e-07, 2.2315e-04, 1.4963e-03, 2.2955e-06, 5.2954e-03,\n",
+            "          2.3964e-08, 1.0185e-02, 1.5138e-05, 5.5548e-02, 2.6798e-06,\n",
+            "          9.9660e-07, 4.9456e-03, 1.3603e-02, 1.8592e-06, 6.2420e-05,\n",
+            "          1.5660e-06, 7.6341e-03, 7.9452e-05, 5.3064e-02, 1.3286e-05,\n",
+            "          3.9175e-04, 3.4565e-04, 1.3788e-05, 3.3502e-04, 4.2560e-05,\n",
+            "          2.7413e-05, 6.3732e-04, 5.6427e-06, 7.9375e-02, 1.2331e-04,\n",
+            "          2.5355e-05, 2.6653e-04, 7.2276e-02, 2.3928e-04, 4.0217e-04,\n",
+            "          3.0147e-02, 2.5549e-02, 2.0608e-02, 2.1711e-04, 1.5886e-04,\n",
+            "          1.1087e-07, 2.4625e-04, 1.6174e-04, 3.0835e-02, 1.3198e-04,\n",
+            "          6.0290e-05, 8.8952e-05, 2.2990e-02, 6.4045e-02, 1.2569e-04,\n",
+            "          3.3218e-02, 4.9694e-05, 6.3183e-03, 8.8580e-06, 4.0545e-05,\n",
+            "          6.7222e-03, 1.2061e-08, 2.1234e-06, 1.2732e-05, 2.0250e-04,\n",
+            "          1.0729e-05, 2.0955e-04, 7.2777e-02, 1.3003e-05, 4.1415e-05,\n",
+            "          1.4441e-03, 6.1313e-06, 1.0222e-04, 6.3229e-04, 5.2100e-06,\n",
+            "          2.7479e-06, 4.5993e-02, 5.2799e-05, 3.3713e-04, 6.9057e-02,\n",
+            "          2.4925e-04, 4.6019e-04, 1.5883e-04, 6.7534e-07, 9.2285e-02,\n",
+            "          2.0678e-02, 1.0624e-05, 8.6735e-04, 8.0262e-02, 8.1885e-05,\n",
+            "          1.0900e-05, 9.7552e-06, 1.0893e-04, 3.1294e-05, 1.4782e-04,\n",
+            "          1.3804e-04, 1.0105e-04, 4.6594e-04, 4.4799e-04, 2.7365e-06]]],\n",
+            "       device='cuda:0', grad_fn=<SoftmaxBackward>)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
